--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "burger",
   "version": "1.0.0",
-  "description": "",
+  "description": "In this assignment, I created a burger logger with MySQL, Node, Express, Handlebars and a homemade ORM (yum!).",
   "main": "server.js",
   "scripts": {
-    "start" : "server.js",
+    "start": "server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,5 +22,6 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mysql": "^2.15.0"
-  }
+  },
+  "devDependencies": {}
 }
